--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
+        <title>Mitrais Carrot</title>
     </head>
     <body>
-        <p>Testing the git</p>
+        <p>Mitrais Carrot is a system used for administrative task of all company trainings</p>
     </body>
 </html>
